--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
   </head>
   <body>
-
+    <div class="wrapper">
+      <section class="zad1">
+        <h3>Polyfill metody repeat dla String</h3>
+      </section>
+    </div>
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
   </body>
