wykonane wszystkie zadania z sylabusa

--- a/index.html
+++ b/index.html
@@ -10,8 +10,27 @@
   <body>
     <div class="wrapper">
       <section class="zad1">
-        <h3>Polyfill metody repeat dla String</h3>
+        <h3>1. Polyfill metody repeat dla String</h3>
       </section>
+      <section class="zad1">
+        <h3>2. Dziedziczenie z klasy EventEmitter</h3>
+      </section>
+      <section class="zad1 ajax">
+        <h3>3. Ajaxowy polyfill dla funkcji fetch</h3>
+      </section>
+      <div>
+        <button class="getDataButton">Get data</button>
+        <pre class="output"><span>Tutaj pojawią się pobrane dane !</span></pre>
+      </div>
+      <section class="zad1">
+        <h3>4. Prywatność za pomocą domknięcia</h3>
+      </section>
+      <section class="zad__ost">
+        <h3>5. Wrapper Toggler dla elementów z drzewa DOM</h3>
+        <section class="textsection"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p></section>
+        <button class="buttonData" data-show="Ujawnij to co jest ukryte !" data-hide="Ukryj">Ujawnij to co jest ukryte !</button>
+      </section>
+
     </div>
     <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
     <script type="text/javascript" src="js/scripts.js"></script>
