--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <section class="zad__ost">
         <h3>5. Wrapper Toggler dla elementów z drzewa DOM</h3>
         <section class="textsection"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate</p></section>
-        <button class="buttonData" data-show="Ujawnij to co jest ukryte !" data-hide="Ukryj">Ujawnij to co jest ukryte !</button>
+        <button class="buttonData" data-show="Ujawnij to co jest ukryte !" data-hide="Ukryj pokazany tekst !">Ujawnij to co jest ukryte !</button>
       </section>
 
     </div>
